--- a/dependency_support/org_theopenroadproject/bundled.BUILD.bazel
+++ b/dependency_support/org_theopenroadproject/bundled.BUILD.bazel
@@ -1416,6 +1416,7 @@ cc_binary(
         ":opensta_lib",
         "@tk_tcl//:tcl",
     ],
+    visibility = ["//visibility:public"],
 )
 
 cc_library(
