--- a/dependency_support/org_theopenroadproject_asap7sc6t_26/BUILD
+++ b/dependency_support/org_theopenroadproject_asap7sc6t_26/BUILD
@@ -12,7 +12,24 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+load("@rules_hdl//pdk/proto:build_defs.bzl", "extract_lef_and_liberty")
+
 package(
     default_applicable_licenses = ["//:package_license"],
     default_visibility = ["//visibility:private"],
+)
+
+extract_lef_and_liberty(
+    name = "asap7-sc6t_rev26_lvt_data",
+    standard_cell = "@org_theopenroadproject_asap7sc6t_26//:asap7-sc6t_rev26_lvt",
+)
+
+extract_lef_and_liberty(
+    name = "asap7-sc6t_rev26_rvt_data",
+    standard_cell = "@org_theopenroadproject_asap7sc6t_26//:asap7-sc6t_rev26_rvt",
+)
+
+extract_lef_and_liberty(
+    name = "asap7-sc6t_rev26_slvt_data",
+    standard_cell = "@org_theopenroadproject_asap7sc6t_26//:asap7-sc6t_rev26_slvt",
 )
